--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,44 +1,3 @@
-{
-	// Use IntelliSense to learn about possible attributes.
-	// Hover to view descriptions of existing attributes.
-	// For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-	"version": "0.2.0",
-	"configurations": [
-		{
-			"name": "(lldb) Launch",
-			"type": "cppdbg",
-			"request": "launch",
-			"program": "${workspaceFolder}/n-puzzle/bin/n_puzzle",
-			// "args": ["-L", "0", "-A", "bfs_2", "<", "${workspaceFolder}/n-puzzle/data/3_3_xx.map"],
-			// "args": ["-L", "1", "-A", "bfs_1", "<", "${workspaceFolder}/n-puzzle/data/3_3_01.map"],
-			// "args": ["-L", "1", "-A", "bfs_1", "<", "${workspaceFolder}/n-puzzle/data/3_3_14.map"],
-			// "args": ["-L", "2", "-A", "dfs_3", "<", "${workspaceFolder}/n-puzzle/data/3_3_14.map"],
-			// "args": ["-L", "2", "-A", "bfs_1", "<", "${workspaceFolder}/n-puzzle/data/4_4_05.map"],
-			// "args": ["-L", "2", "-A", "toop_1", "<", "${workspaceFolder}/n-puzzle/data/3_3_14.map"],
-			// "args": ["-L", "2", "-A", "toop_1", "<", "${workspaceFolder}/n-puzzle/data/3_3_22_2.map"],
-			// "args": ["-L", "2", "-A", "toop_1", "<", "${workspaceFolder}/n-puzzle/data/3_3_01.map"],
-			// "args": ["-L", "2", "-A", "a_star_t", "<", "${workspaceFolder}/n-puzzle/data/3_3_05.map"],
-			// "args": ["-L", "2", "-A", "ida*", "<", "${workspaceFolder}/n-puzzle/data/3_3_05.map"],
-			"args": ["-L", "2", "-A", "ida*", "<", "${workspaceFolder}/n-puzzle/data/3_3_xx.map"],
-			"stopAtEntry": false,
-			"cwd": "${workspaceFolder}/n-puzzle",
-			"environment": [],
-			"externalConsole": false,
-			// "MIMode": "lldb",
-			"MIMode": "gdb",
-			"setupCommands":
-			[
-				{
-					// "text": "settings set target.input-path ${workspaceFolder}/n-puzzle/data/3_3_05.map"
-					"description": "Enable pretty-printing for gdb",
-					"text": "-enable-pretty-printing",
-					"ignoreFailures": true
-				}
-			]
-		}
-	]
-}
-
 // {
 // 	// Use IntelliSense to learn about possible attributes.
 // 	// Hover to view descriptions of existing attributes.
@@ -50,20 +9,61 @@
 // 			"type": "cppdbg",
 // 			"request": "launch",
 // 			"program": "${workspaceFolder}/n-puzzle/bin/n_puzzle",
-// 			"args": ["-L", "2", "-A", "dfs_3"],
+// 			// "args": ["-L", "0", "-A", "bfs_2", "<", "${workspaceFolder}/n-puzzle/data/3_3_xx.map"],
+// 			// "args": ["-L", "1", "-A", "bfs_1", "<", "${workspaceFolder}/n-puzzle/data/3_3_01.map"],
+// 			// "args": ["-L", "1", "-A", "bfs_1", "<", "${workspaceFolder}/n-puzzle/data/3_3_14.map"],
+// 			// "args": ["-L", "2", "-A", "dfs_3", "<", "${workspaceFolder}/n-puzzle/data/3_3_14.map"],
+// 			// "args": ["-L", "2", "-A", "bfs_1", "<", "${workspaceFolder}/n-puzzle/data/4_4_05.map"],
+// 			// "args": ["-L", "2", "-A", "toop_1", "<", "${workspaceFolder}/n-puzzle/data/3_3_14.map"],
+// 			// "args": ["-L", "2", "-A", "toop_1", "<", "${workspaceFolder}/n-puzzle/data/3_3_22_2.map"],
+// 			// "args": ["-L", "2", "-A", "toop_1", "<", "${workspaceFolder}/n-puzzle/data/3_3_01.map"],
+// 			// "args": ["-L", "2", "-A", "a_star_t", "<", "${workspaceFolder}/n-puzzle/data/3_3_05.map"],
+// 			// "args": ["-L", "2", "-A", "ida*", "<", "${workspaceFolder}/n-puzzle/data/3_3_05.map"],
+// 			"args": ["-L", "2", "-A", "ida*", "<", "${workspaceFolder}/n-puzzle/data/3_3_xx.map"],
 // 			"stopAtEntry": false,
 // 			"cwd": "${workspaceFolder}/n-puzzle",
 // 			"environment": [],
 // 			"externalConsole": false,
-// 			"MIMode": "lldb",
+// 			// "MIMode": "lldb",
+// 			"MIMode": "gdb",
 // 			"setupCommands":
 // 			[
 // 				{
 // 					// "text": "settings set target.input-path ${workspaceFolder}/n-puzzle/data/3_3_05.map"
-// 					// "text": "settings set target.input-path ${workspaceFolder}/n-puzzle/data/3_3_14.map"
-// 					"text": "settings set target.input-path ${workspaceFolder}/n-puzzle/data/4_4_10.map"
-// 		}
+// 					"description": "Enable pretty-printing for gdb",
+// 					"text": "-enable-pretty-printing",
+// 					"ignoreFailures": true
+// 				}
 // 			]
 // 		}
 // 	]
 // }
+
+{
+	// Use IntelliSense to learn about possible attributes.
+	// Hover to view descriptions of existing attributes.
+	// For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+	"version": "0.2.0",
+	"configurations": [
+		{
+			"name": "(lldb) Launch",
+			"type": "cppdbg",
+			"request": "launch",
+			"program": "${workspaceFolder}/n-puzzle/bin/n_puzzle",
+			"args": ["-L", "2", "-A", "ida*"],
+			"stopAtEntry": false,
+			"cwd": "${workspaceFolder}/n-puzzle",
+			"environment": [],
+			"externalConsole": false,
+			"MIMode": "lldb",
+			"setupCommands":
+			[
+				{
+					// "text": "settings set target.input-path ${workspaceFolder}/n-puzzle/data/3_3_05.map"
+					// "text": "settings set target.input-path ${workspaceFolder}/n-puzzle/data/3_3_14.map"
+					"text": "settings set target.input-path ${workspaceFolder}/n-puzzle/data/3_3_10.map"
+		}
+			]
+		}
+	]
+}
